Added controller and routes for 3 more tables
